@@ -1,6 +1,7 @@
 package lk.ijse.finalcoursework.shoeshop.service.impl;
 
 import lk.ijse.finalcoursework.shoeshop.dto.CustomerDTO;
+import lk.ijse.finalcoursework.shoeshop.dto.InventoryDTO;
 import lk.ijse.finalcoursework.shoeshop.dto.SalesDTO;
 import lk.ijse.finalcoursework.shoeshop.dto.SalesInventoryDTO;
 import lk.ijse.finalcoursework.shoeshop.persistence.entity.Customer;
@@ -16,8 +17,13 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.time.format.DateTimeFormatter;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * @author: Manith Lakvidu,
@@ -39,9 +45,22 @@ public class SaleServiceImpl implements SaleService {
 
     @Override
     public List<SalesDTO> getAllSales() {
-        return salesRepository.findAll().stream().map(
-                sales -> modelMapper.map(sales, SalesDTO.class)
-        ).toList();
+        List<Sales> salesList = salesRepository.findAll();
+        return salesList.stream().map(sales -> {
+            SalesDTO salesDTO = modelMapper.map(sales, SalesDTO.class);
+
+            List<SalesDetails> salesDetailsList = salesDetailsRepository.findAllBySalesOrderNo(sales.getOrderNo());
+            List<SalesInventoryDTO> salesInventoryDTOList = salesDetailsList.stream()
+                    .map(details -> {
+                        SalesInventoryDTO salesInventoryDTO = modelMapper.map(details, SalesInventoryDTO.class);
+                        salesInventoryDTO.setInventory(modelMapper.map(details.getInventory(), InventoryDTO.class));
+                        return salesInventoryDTO;
+                    })
+                    .collect(Collectors.toList());
+
+            salesDTO.setInventory(salesInventoryDTOList);
+            return salesDTO;
+        }).collect(Collectors.toList());
     }
 
     @Override
@@ -70,8 +89,6 @@ public class SaleServiceImpl implements SaleService {
 
         List<SalesInventoryDTO> salesInventoryDTO = new ArrayList<>();
         for (SalesInventoryDTO inventoryDTO : salesDTO.getInventory()) {
-            /*System.out.println("------------------------");
-            System.out.println(inventoryDTO.getInventory());*/
             SalesDetails savedSaleDetails = salesDetailsRepository.save(modelMapper.map(inventoryDTO, SalesDetails.class));
             salesInventoryDTO.add(modelMapper.map(savedSaleDetails, SalesInventoryDTO.class));
         }
@@ -81,21 +98,44 @@ public class SaleServiceImpl implements SaleService {
 
     @Override
     public void updateSales(String id, SalesDTO salesDTO) {
-        for (SalesInventoryDTO inventoryDTO : salesDTO.getInventory()) {
-            if(!salesDetailsRepository.existsById(inventoryDTO.getId())){
-                throw new NotFoundException("Update Failed; Sales id: " +
-                        salesDTO.getOrderNo() + " does not exist");
+        for(SalesInventoryDTO inventoryDTO : salesDTO.getInventory()){
+            if(inventoryDTO.getQuantity() == 0){
+                if(!isDateWithinThreeDays(String.valueOf(salesDTO.getPurchaseDate()))){
+                    System.out.println("----------------------------------------------------------------");
+                    System.out.println("comming");
+                    throw new NotFoundException("Update Failed This Order " +
+                            salesDTO.getOrderNo() + " Can't refund");
+                }
             }
-            salesDetailsRepository.save(modelMapper.map(inventoryDTO, SalesDetails.class));
+        }
+        if(salesRepository.existsById(salesDTO.getOrderNo())){
+            salesRepository.save(modelMapper.map(salesDTO,Sales.class));
+            for (SalesInventoryDTO inventoryDTO : salesDTO.getInventory()) {
+                if(!salesDetailsRepository.existsById(inventoryDTO.getId())){
+                    throw new NotFoundException("Update Failed; Sales id: " +
+                            salesDTO.getOrderNo() + " does not exist");
+                }
+                salesDetailsRepository.save(modelMapper.map(inventoryDTO, SalesDetails.class));
+            }
         }
     }
 
     @Override
     public void deleteSales(String id) {
-        if(!salesDetailsRepository.existsBySalesOrderNo(id)){
+        if(!salesDetailsRepository.existsBySalesOrderNo(id)&&!salesRepository.existsByOrderNo(id)){
             throw  new NotFoundException("Sales "+ id + "Not Found...");
+        }else if(salesRepository.existsByOrderNo(id)){
+            salesRepository.deleteByOrderNo(id);
         }
         salesDetailsRepository.deleteAllBySalesOrderNo(id);
         salesRepository.deleteByOrderNo(id);
+    }
+
+    protected boolean isDateWithinThreeDays(String dateString) {
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("EEE MMM dd HH:mm:ss z yyyy");
+        LocalDateTime inputDate = LocalDateTime.parse(dateString, formatter.withZone(ZoneId.of("Asia/Kolkata")));
+        LocalDateTime currentDate = LocalDateTime.now(ZoneId.of("Asia/Kolkata"));
+        LocalDateTime threeDaysAgo = currentDate.minus(3, ChronoUnit.DAYS);
+        return !inputDate.isBefore(threeDaysAgo);
     }
 }
